<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/blue_1"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:cardCornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="68dp"
        android:layout_gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/shopping_basket_2"
            android:src="@drawable/shopping_basket_2"
            tools:ignore="HardcodedText" />

    </androidx.cardview.widget.CardView>

    <EditText
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:background="@drawable/login"
        android:hint="@string/login" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:autofillHints=""
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:background="@drawable/login"
        android:inputType="textPassword"
        android:hint="@string/password" />

    <Button
        android:id="@+id/logInButton"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@color/blue_2"
        android:textSize="20sp"
        android:text="@string/log_in" />

    <TextView
        android:id="@+id/Razrab"
        android:layout_width="match_parent"
        android:layout_height="33dp"
        android:gravity="center"
        android:text="@string/author"
        android:textColor="@color/black"
        android:textSize="15sp" />

</LinearLayout>