<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp"
    android:background="@color/pang"
    android:layout_margin="4dp"
    android:elevation="4dp"
    android:clipToPadding="false">

    <CheckBox
        android:id="@+id/checkBoxProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textViewProductName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:text="@string/tvName" />

    <TextView
        android:id="@+id/textViewProductQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:text="@string/tvQuantity" />

    <TextView
        android:id="@+id/textViewProductPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:text="@string/tvPrice" />

    <ImageButton
        android:id="@+id/deleteProductButton"
        android:layout_width="35dp"
        android:layout_height="match_parent"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:padding="8dp"
        android:scaleType="centerInside"
        android:src="@drawable/ic_delete" />
</LinearLayout>
